chore: native access fixes and general cleanups
Signed-off-by: Sam Gammon <sam@elide.dev>